syntax = "proto3";

package api;

import "google/api/annotations.proto";

option go_package = ".;pb";

message RegisterRequest {
  string username = 1;
  string password = 2;
  string role = 3;
}

message RegisterResponse { string access_token = 1; }

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse { string access_token = 1; }

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post : "/v1/u/register"
      body : "*"
    };
  };
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post : "/v1/u/login"
      body : "*"
    };
  };
}